# Lunar-Mining

./: .gitignore  CMakeLists.txt  Event.h  MiningStation.cpp  MiningStation.h  MiningTruck.cpp  MiningTruck.h  README.md  Simulation.cpp  Simulation.h  main.cpp
include/: MiningProcess.h  MiningStation.h  MiningTruck.h  Simulation.h
src/: MiningStation.cpp  MiningTruck.cpp  Simulation.cpp  main.cpp
tests/: test_MiningStation.cpp  test_MiningTruck.cpp  test_Simulation.cpp
